# talkbot

./: .env.example  .env.template  .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml  record_voice.bat  record_voice.sh  run-gui.bat  run-server.bat  setup.bat  setup.sh
benchmarks/: LESSONS_LEARNED.md  README.md  baselines.json  decision_strategy.md  evaluation_values.json  model_matrix.control-node.json  model_matrix.ctx_sweep_m3max.json  model_matrix.endurance_intent.json  model_matrix.example.json  model_matrix.full_all.json  model_matrix.full_remote.json  model_matrix.gemma4-26b.json  model_matrix.jetson.json  model_matrix.local-vs-remote.json  model_matrix.m3max.json  model_matrix.ministral_cross_provider.json  model_matrix.mistral.json  model_matrix.next_run.json  model_matrix.ollama_models.json  model_matrix.prompts.example.json  model_matrix.qwen3-1.7b-ctxmax.json  model_matrix.schema_variants.json  model_matrix.small_toolcall.json  model_matrix.tool_profiles.json  model_matrix.tts_directive.json  pipeline_prompts.json  voice_prompts.template.json  voice_prompts_redo.json  voice_recording_guide.md
docs/: benchmark-design.md  tool_design.md
models/: README.md
prompts/: agent.md  catalog.json  tool_benchmark.md  tool_reliability.md
scripts/: benchmark_context_sweep.py  benchmark_conversations.py  benchmark_stt.py  benchmark_tts.py  build_grand_leaderboard.py  build_pipeline_leaderboard.py  compare_runs.py  download-model.bat  download-model.sh  download_model.py  download_voice_dataset.py  manual_voice_smoke.py  ollama_nothink_proxy.py  run_cli_uat.py  (+9 more)
(+202 files in other folders)
