[project]
name = "talkbot"
version = "0.1.0"
description = "A talking bot demo using OpenRouter and pyttsx3"
readme = "README.md"
authors = [
    { name = "ricklon", email = "rick.rickanderson@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "edge-tts>=6.1",
    "httpx>=0.24",
    "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl",
    "pygame>=2.5",
    "pyttsx3>=2.90",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.3.2",
]
voice = [
    "faster-whisper>=1.0",
    "silero-vad>=5.1",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
talkbot = "talkbot.cli:main"
talkbot-gui = "talkbot.ui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/talkbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that exercise real external/runtime backends",
]
